--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # Site settings
-title: Best massage in Riga
-description: best massage place in Riga Latvia
+title: BDSM in Riga
+description: BDSM in Latvia
 # baseurl: "/particle" # the subpath of your site, e.g. /blog
 # url: "localhost:3000" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
 # User settings
-username: This Domain 
-user_description: This domain name is for sale. 
-user_title: IS FOR SALE!
-email: domainlv@gmail.com
+username: Secret BDSM in Riga
+user_description: Riga BDSM 
+user_title: Contact to find more. anna@femdom.lv
+email: anna@femdom.lv
 
 # Google-analytics
 google-analytics:
