--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # Site settings
-title: BDSM in Riga
-description: BDSM in Latvia
+title: Riga
+description: Latvia
 # baseurl: "/particle" # the subpath of your site, e.g. /blog
 # url: "localhost:3000" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
 # User settings
-username: Secret BDSM in Riga
-user_description: Riga BDSM 
-user_title: Contact to find more. anna@femdom.lv
-email: anna@femdom.lv
+username: Comming soon
+user_description: Riga
+user_title: Contact to find more.
+email: domainlv@gmail.com
 
 # Google-analytics
 google-analytics:
