--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: Latvia
 # url: "localhost:3000" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
 # User settings
-username: Comming soon
+username: Coming soon
 user_description: Riga
 user_title: Contact to find more.
 email: domainlv@gmail.com
